<resources>
    <string name="app_name">WFD</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


    <string name="capture_button_alt">Capture</string>
    <string name="unknown">UNKNOWN</string>
    <string name="ingredient_name">ingredient name</string>
    <string name="amount">amount</string>
    <string name="amt_type">amt type</string>
    <string name="recipes">Recipes</string>
    <string name="recipe_name">recipe name</string>
    <string name="new_recipe">New Recipe</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="select_an_ingredient">Select An Ingredient</string>
    <string name="enter_an_ammount">Enter an Ammount</string>
    <string name="unit_type">Unit Type:</string>


    <string-array name="measurements">
        <item>CUP</item>
        <item>TEASPOON</item>
        <item>TABLESPOON</item>
        <item>UNIT</item>
    </string-array>

</resources>